k8s/test-resources.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-test
